[package]
name = "l16-lri"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "0.17.8"
lri-rs = { path = "lri-rs" }
unpacker = { path = "unpacker" }
rawproc = { git = "https://github.com/eclecticnybles/gaze" }
rawloader = "0.37.1"
nalgebra = "0.31.4"
protobuf-json-mapping = "3.2.0"
protobuf = "3.2.0"
