[package]
name = "lri-proto"
version = "0.1.0"
#authors = ["Daniel L. Lu <daniel@lawrence.lu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = { version = "3.2", features = ["with-bytes"] }

[build-dependencies]
protobuf-codegen = "3"
